--- a/scss/src/global.scss
+++ b/scss/src/global.scss
@@ -25,4 +25,6 @@ body {
   font-family: $body-font-family;
   font-size: $body-font-size;
   font-weight: $body-font-weight;
+
+  background: $body-bg-color;
 }
