--- a/packages/scss/src/atoms/Button.scss
+++ b/packages/scss/src/atoms/Button.scss
@@ -1,9 +1,10 @@
 @import "foundation/all";
 
 .dse-button-container {
+  display: flex;
+
   background: $btn-primary-bg;
   color: $btn-primary-color;
   border: none;
-  padding: map-get($spacing, "md");
-  font-weight: $fw-bold;
+  padding: map-get($spacing, 'xxxs');
 }
