--- a/packages/scss/src/molecules/Select.scss
+++ b/packages/scss/src/molecules/Select.scss
@@ -1,65 +1,78 @@
 @import "foundation/all";
 
 .dse-select {
-  display: flex;
-  flex-direction: column;
-
-  position: relative;
-
-  &__label {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    flex-direction: column;
 
-    @include padding("xs");
-    border: 1px solid $form-border-color;
-    background: $form-bg-color;
+    position: relative;
 
-    font-family: $body-font-family;
+    &__label {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
-    cursor: pointer;
-  }
+        @include padding('xs');
+        border: 1px solid $form-border-color;
+        background: $form-bg-color;
 
-  &__overlay {
-    @include padding("none");
-    @include margin("none");
+        font-family: $body-font-family;
 
-    border: 1px solid $form-border-color;
-    background: $form-bg-color;
-    z-index: 99;
-    position: absolute;
-    width: 100%;
-    box-shadow: map-get($shadows, "base");
-  }
+        cursor: pointer;
+    }
 
-  &__option {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    cursor: pointer;
-    @include padding("xs");
-    box-sizing: border-box;
-  }
+    &__caret {
+        transition: all 250ms ease;
 
-  &__option:hover {
-    background-color: $form-bg-color-hover;
-  }
+        &--open {
+            transform: rotate(180deg);
+        }
 
-  &__option-selected {
-    background-color: $form-bg-option-selected;
-    color: $form-color-option-selected;
-  }
+        &--closed {
+            transform: rotate(0deg);
+        }
+    }
 
-  &__caret {
-    transition: all 250ms ease;
+    &__overlay {
+        @include padding('none');
+        @include margin('none');
 
+        border: 1px solid $form-border-color;
+        background-color: $form-bg-color;
+        z-index: 99;
+        display: none;
+
+        list-style-type: none;
+
+        box-shadow: map-get($shadows, 'base');
+
+        position: absolute;
+
+        width: 100%;
+    }
+
+    &__option {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        cursor: pointer;
+        @include padding('xs');
+
+        box-sizing: border-box;
+    }
+
+    &__option--highlighted {
+        background-color: $form-bg-color-hover;
+    }
+
+    &__option--selected {
+        background-color: $form-bg-option-selected;
+        color: $form-color-option-selected;
+    }
+}
+
+.dse-select__overlay {
     &--open {
-      transform: rotate(180deg);
+        display: block;
     }
-
-    &--closed {
-      transform: rotate(0deg);
-    }
-  }
 }
